5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1575_2896.log
== TEST (2019-03-12 19:29:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Pedro")

print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:30:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Pedro")

print("var")
-- EXECUTION TIME:
0.227311
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:30:31) 
-- CODE:
# 9

# Leitura de valores de entrada
var = input("Pedro")

print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:30:51) 
-- CODE:
# 9

# Leitura de valores de entrada
var = input("Digite o nome:")

print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:30:56) 
-- CODE:
# 9

# Leitura de valores de entrada
var = input("Digite o nome:")

print("var")
-- EXECUTION TIME:
0.263076
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:31:05) 
-- CODE:
# 9

# Leitura de valores de entrada
var = input("Digite o nome:")

print(var)
-- EXECUTION TIME:
0.190607
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:35:07) 
-- CODE:
# 9

# Leitura de valores de entrada
var = input("Digite o nome:")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:35:37) 
-- CODE:
#Python

#Python
var = input("Digite o nome:")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:48:47) 
-- CODE:
#var= input

#Python
var = input("Digite o nome:")

print(nome: ,var)
-- ERROR:
File "XXXX", line 6
    print(nome: ,var)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:49:48) 
-- CODE:
#var

#Print
var = input("Digite o nome:")

print(nome: ,var)
-- ERROR:
File "XXXX", line 6
    print(nome: ,var)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:50:06) 
-- CODE:
#var

#Print
var = input("Digite o nome:")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:51:15) 
-- CODE:
#var

#Print
var = input("Digite o nome:")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:51:19) 
-- CODE:
#var

#Print
var = input("Digite o nome:")

print(var)
-- EXECUTION TIME:
0.134725
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
